--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-streamlit
-plotly
-pandas
+streamlit==1.52.1
+pydicom==2.4.4
+numpy==1.26.4
+matplotlib==3.9.2
+plotly==5.24.1
+scikit-image==0.24.0
+sqlalchemy==2.0.36
